SubBt/force-app/main/default/objects/Inspection__c/Inspection__c.object-meta.xml
<CustomObject>
    <label>Inspection</label>
    <nameField>
        <displayFormat>IS-{00000}</displayFormat>
        <label>IS #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>