SubBt/force-app/main/default/objects/Inspection__c/fields/Block_No_Lot_No__c.field-meta.xml
<CustomField>
    <fullName>Block_No_Lot_No__c</fullName>
    <label>Block No./Lot No.</label>
    <length>250</length>
    <type>Text</type>
</CustomField>