SubBt/force-app/main/default/objects/Inspection__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Provide detailed instruction for the contractor&apos;s here.</description>
    <inlineHelpText>Provide detailed instruction for the contractor&apos;s here.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>