SubBt/force-app/main/default/objects/Inspection__c/fields/Failed__c.field-meta.xml
<CustomField>
    <fullName>Failed__c</fullName>
    <formula>(Failed_Inspection_Lines__c / Total_Inspection_Lines__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Failed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>