SubBt/force-app/main/default/objects/Inspection__c/fields/Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Date__c</fullName>
    <description>Date the Inspection Occurred.</description>
    <inlineHelpText>Date the Inspection Occurred.</inlineHelpText>
    <label>Inspection Date</label>
    <type>Date</type>
</CustomField>