SubBt/force-app/main/default/objects/Inspection__c/fields/Inspection_Id__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Id__c</fullName>
    <label>Inspection Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>