SubBt/force-app/main/default/objects/Inspection__c/fields/Inspection_Ids__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Ids__c</fullName>
    <formula>HYPERLINK( &apos;/&apos;+Id,  Inspection_Id__c, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspection</label>
    <type>Text</type>
</CustomField>