SubBt/force-app/main/default/objects/Inspection__c/fields/Items_Failed__c.field-meta.xml
<CustomField>
    <fullName>Items_Failed__c</fullName>
    <formula>15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Items Failed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>