SubBt/force-app/main/default/objects/Inspection__c/fields/Items_N_A__c.field-meta.xml
<CustomField>
    <fullName>Items_N_A__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Items N/A</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>