SubBt/force-app/main/default/objects/Inspection__c/fields/Items_Passed__c.field-meta.xml
<CustomField>
    <fullName>Items_Passed__c</fullName>
    <formula>85</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Items Passed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>