SubBt/force-app/main/default/objects/Inspection__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>What area of the job site should the inspection be performed.  You can define location, material, etc...</description>
    <inlineHelpText>What area of the job site should the inspection be performed.  You can define location, material, etc...</inlineHelpText>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>