SubBt/force-app/main/default/objects/Inspection__c/fields/Passed__c.field-meta.xml
<CustomField>
    <fullName>Passed__c</fullName>
    <formula>(Passed_Inspection_Lines__c / Total_Inspection_Lines__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>