SubBt/force-app/main/default/objects/Inspection__c/fields/Passed_Inspection_Lines__c.field-meta.xml
<CustomField>
    <fullName>Passed_Inspection_Lines__c</fullName>
    <label>Passed Inspection Lines</label>
    <summaryFilterItems>
        <field>Inspection_Line__c.Status__c</field>
        <operation>equals</operation>
        <value>Pass</value>
    </summaryFilterItems>
    <summaryForeignKey>Inspection_Line__c.Inspection__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>