SubBt/force-app/main/default/objects/Inspection__c/fields/Pending__c.field-meta.xml
<CustomField>
    <fullName>Pending__c</fullName>
    <formula>(Pending_Inspection_Lines__c / Total_Inspection_Lines__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>