SubBt/force-app/main/default/objects/Inspection__c/fields/Permit__c.field-meta.xml
<CustomField>
    <fullName>Permit__c</fullName>
    <label>Permit #</label>
    <length>250</length>
    <type>Text</type>
</CustomField>