SubBt/force-app/main/default/objects/Inspection__c/fields/Responsible_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contracting company responsible for the Inspection.</description>
    <inlineHelpText>Contracting company responsible for the Inspection.</inlineHelpText>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inspections</relationshipLabel>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>