SubBt/force-app/main/default/objects/Inspection__c/fields/Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Date__c</fullName>
    <description>Date the Inspection is scheduled to occur.</description>
    <inlineHelpText>Date the Inspection is scheduled to occur.</inlineHelpText>
    <label>Scheduled Date</label>
    <type>Date</type>
</CustomField>