SubBt/force-app/main/default/objects/Inspection__c/fields/Total_Inspection_Lines__c.field-meta.xml
<CustomField>
    <fullName>Total_Inspection_Lines__c</fullName>
    <label>Items to Inspect</label>
    <summaryForeignKey>Inspection_Line__c.Inspection__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>