SubBt/force-app/main/default/objects/Inspection__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Project__c</columns>
    <columns>Inspection_Ids__c</columns>
    <columns>Name__c</columns>
    <columns>Inspection_Date__c</columns>
    <columns>Status__c</columns>
    <columns>TYpe__c</columns>
    <columns>Inspection_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>