SubBt/force-app/main/default/objects/Inspection__c/listViews/Open_Inspection_Items.listView-meta.xml
<ListView>
    <fullName>Open_Inspection_Items</fullName>
    <columns>NAME</columns>
    <columns>TYpe__c</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Inspection_Date__c</columns>
    <columns>Responsible_Contractor__c</columns>
    <columns>Inspector__c</columns>
    <columns>Point_of_Contact__c</columns>
    <columns>Project__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Open Inspection Items</label>
</ListView>